--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<p class="subtitle">FROM DATA TO MODELS AND BACK</p>
 
 							 <p class="satellite">A satellite event of the </p>
-							<p class="satellite" style="margin-bottom: 3em;"><a href="https://sefm-conference.github.io/2024/" target="_blank">21st International Conference of Software Engineering and Formal Methods - SEFM 2024</a></p>
+							<p class="satellite" style="margin-bottom: 3em;"><a href="https://sefm-conference.github.io/2024/" target="_blank">22nd International Conference of Software Engineering and Formal Methods - SEFM 2024</a></p>
 						    </p>	
 						</div>
 
