--- a/index.html
+++ b/index.html
@@ -902,6 +902,7 @@ Sustainable Development (MoKMaSD) from 2012 to 2015, then it was renamed DataMod
 							<li><a title="Keynotes" href="#keynote">Keynotes</a></li>
 							<li><a title="Program" href="#program">Program</a></li>
 							<li><a title="Organization" href="#organization">Organization</a></li>
+                     <li><a title="Past Editions" href="#past-editions">Past editions</a></li>
 						</ul>
 					</div>
 				</nav><!-- Navigation /- -->
