--- a/index.html
+++ b/index.html
@@ -830,6 +830,7 @@
 				<h1 class="title">Past Editions</h1>
 				<i id="book" class="fa fa-fast-backward fa-3x"></i>
 			</div>
+         
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">&nbsp;
 			</div>
 
@@ -841,22 +842,24 @@ Sustainable Development (MoKMaSD) from 2012 to 2015, then it was renamed DataMod
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-left">
 
          <ul>
-          <li>As <b>MoKMaSD: Modelling and Knowledge Management applications: Systems and Domains</b>:</li>
+          <li>As <b>MoKMaSD: Modelling and Knowledge Management applications for
+Sustainable Development</b>:</li>
           <ul>
-           <li><a href="past-editions/MoKMaSD-2012/MoKMaSD Website.htm">1st MoKMaSD’2012</a>: Thessaloniki/Greece</li>
-           <li><a href="past-editions/MoKMaSD-2013/MoKMaSD 2013.htm">2nd MoKMaSD’2013</a>: Madrid/Spain</li>
-           <li><a href="past-editions/MoKMaSD-2014/MoKMaSD 2014.htm">3rd MoKMaSD’2014</a>: Grenoble/France</li>
-           <li><a href="past-editions/MoKMaSD-2015/MoKMaSD 2015.htm">4th MoKMaSD’2015</a>: York/UK</li>
+           <li><a href="past-editions/MoKMaSD-2012/MoKMaSD Website.htm">1<sup>st</sup> MoKMaSD'2012</a>: Thessaloniki/Greece</li>
+           <li><a href="past-editions/MoKMaSD-2013/MoKMaSD 2013.htm">2<sup>nd</sup> MoKMaSD'2013</a>: Madrid/Spain</li>
+           <li><a href="past-editions/MoKMaSD-2014/MoKMaSD 2014.htm">3<sup>rd</sup> MoKMaSD'2014</a>: Grenoble/France</li>
+           <li><a href="past-editions/MoKMaSD-2015/MoKMaSD 2015.htm">4<sup>th</sup> MoKMaSD'2015</a>: York/UK</li>
           </ul>
           <li>As <b>DataMod: From Data to Models and Back</b>:</li>
           <ul>
-           <li><a href="past-editions/Datamod-2016/DataMod 2016 – From Data to Models and Back (DataMod).htm">5th DataMod’2016</a>: Viena/Austria</li>
-           <li><a href="past-editions/Datamod-2017/DataMod 2017 – From Data to Models and Back (DataMod).htm">6th DataMod’2017</a>: Trento/Italy</li>
-           <li><a href="past-editions/Datamod-2018/DataMod 2018 – From Data to Models and Back (DataMod).htm">7th DataMod’2018</a>: Toulouse/France</li>
-           <li><a href="past-editions/Datamod-2019/DataMod 2019 – From Data to Models and Back (DataMod).htm">8th DataMod’2019</a>: Porto/Portugal</li>
-           <li><a href="past-editions/Datamod-2020/DataMod 2020.htm">9th DataMod’2020</a>: on-line</li>
-           <li><a href="past-editions/Datamod-2021/DataMod 2021.htm">10th DataMod’2021</a>: on-line</li>
-           <li><a href="past-editions/Datamod-2023/DataMod 2023.htm">11th DataMod’2023</a>: Eindhoven/The Netherlands</li>
+           <li><a href="past-editions/Datamod-2016/DataMod 2016 – From Data to Models and Back (DataMod).htm">5<sup>th</sup> DataMod'2016</a>: Viena/Austria</li>
+           <li><a href="past-editions/Datamod-2017/DataMod 2017 – From Data to Models and Back (DataMod).htm">6<sup>th</sup> DataMod'2017</a>: Trento/Italy</li>
+           <li><a href="past-editions/Datamod-2018/DataMod 2018 – From Data to Models and Back (DataMod).htm">7<sup>th</sup> DataMod'2018</a>: Toulouse/France</li>
+           <li><a href="past-editions/Datamod-2019/DataMod 2019 – From Data to Models and Back (DataMod).htm">8<sup>th</sup> DataMod'2019</a>: Porto/Portugal</li>
+           <li><a href="past-editions/Datamod-2020/DataMod 2020.htm">9<sup>th</sup> DataMod'2020</a>: on-line</li>
+           <li><a href="past-editions/Datamod-2021/DataMod 2021.htm">10<sup>th</sup> DataMod'2021</a>: on-line</li>
+           <li><a href="past-editions/Datamod-2023/DataMod 2023.htm">11<sup>th</sup> DataMod'2023</a>: Eindhoven/The Netherlands</li>
+           <li><a href="index.html">12<sup>th</sup> DataMod'2024</a>: Aveiro/Portugal</li>
           </ul>
          </ul>
 
