Fixed div alignment in main page and colors on fa icons

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					
 				</div>
-				<div class="col-md-8 col-sm-6 col-xs-12 transp">
+				<div class="col-md-8 col-sm-6 col-xs-12 transp align-left">
 					<div class="howwecan-right">
 						<div class="section-header">
 							<p class="pre">12th International Symposium</h2>
@@ -828,7 +828,7 @@
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 				<h1 class="title">Past Editions</h1>
-				<i id="book" class="fa fa-fast-backward fa-3x"></i>
+				<i id="book" class="fa fa-fast-backward fa-3x" style="font-size:48px;color:#7B0323"></i>
 			</div>
          
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">&nbsp;
@@ -859,7 +859,10 @@ Sustainable Development</b>:</li>
            <li><a href="past-editions/Datamod-2020/DataMod 2020.htm">9<sup>th</sup> DataMod'2020</a>: on-line</li>
            <li><a href="past-editions/Datamod-2021/DataMod 2021.htm">10<sup>th</sup> DataMod'2021</a>: on-line</li>
            <li><a href="past-editions/Datamod-2023/DataMod 2023.htm">11<sup>th</sup> DataMod'2023</a>: Eindhoven/The Netherlands</li>
-           <li><a href="index.html">12<sup>th</sup> DataMod'2024</a>: Aveiro/Portugal</li>
+           <li><div class="iconsInfo">
+                 <i class="fa fa-arrow-right" style="font-size:20px;color:#7B0323"></i>
+                 <a href="index.html">12<sup>th</sup> DataMod'2024</a>: Aveiro/Portugal</li>
+                </div>
           </ul>
          </ul>
 
