--- a/index.html
+++ b/index.html
@@ -161,15 +161,21 @@
 	<div id="about" class="container-fluid no-padding introduction-section">
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center" style="padding: 3em;">
-				<h1 class="title">About Datamod</h1>
-				<p class="title-lead mt-20 text-justify">
+				<h1 class="title">About DataMod</h1>
+				<p class="title-lead mt-20 text-left">
 					DataMod aims at bringing together practitioners and researchers from academia, industry and
 					research institutions interested in the combined application of computational modelling methods
 					with data-driven techniques from the areas of knowledge management, data mining and machine
-					learning. Modelling methodologies of interest include automata, agents, Petri nets, process
+					learning. 
+             </p>
+             <p class="title-lead mt-20 text-left">
+               Modelling methodologies of interest include automata, agents, Petri nets, process
 					algebras and rewriting systems. Application domains include social systems, ecology, biology,
 					medicine, smart cities, governance, security, education, software engineering, and any other
-					field that deals with complex systems and large amounts of data. Papers can present research
+					field that deals with complex systems and large amounts of data.
+             </p>
+             <p class="title-lead mt-20 text-left">
+               Papers can present research
 					results in any of the themes of interest for the symposium as well as application experiences,
 					tools and promising preliminary ideas. Papers dealing with synergistic approaches that integrate
 					modelling and knowledge management/discovery or that exploit knowledge management/discovery to
