--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="col-md-4 col-sm-4 col-xs-6 social">
 						<ul>	
 							<li><a title="Twitter" href="https://twitter.com/Data2ModelsBack" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a title="Mail" href="#"><i class="fa fa-envelope"></i></a></li>
+							<li><a title="Mail" href="mailto:datamod2024@easychair.org"><i class="fa fa-envelope"></i></a></li>
 
 						</ul>
 					</div>
