--- a/index.html
+++ b/index.html
@@ -755,12 +755,30 @@
 						   </span>
 					</h3>
 						<ul>
-                     <!--
-							<li>Giovanna Broccia, ISTI-CNR, Italy</li>
-							<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
-							<li>Paolo Milazzo, University of Pisa, Italy</li>
-                     -->
-						</ul>
+							<li>Oana Andrei, University of Glasgow</li>
+							<li>Luca Arnaboldi, University of Birmingham</li>
+							<li>Juliana Küster Filipe Bowles, School of Computer Science, University of St Andrews</li>
+							<li>Giovanna Broccia, ISTI-CNR, FMT Lab</li>
+							<li>Antonio Cerone, Nazarbayev University</li>
+							<li>Ricardo M. Czekster, Aston University</li>
+							<li>Flavio Ferrarotti, Software Competence Centre Hagenberg</li>
+							<li>Vashti Galpin, Laboratory for Foundations of Computer Science, University of Edinburgh</li>
+							<li>Riccardo Guidotti, University of Pisa</li>
+							<li>Alexander Kocian, University of Pisa</li>
+							<li>Livia Lestingi, Politecnico di Milano</li>
+							<li>José Manuel	Ferreira Machado, University of Minho</li>
+							<li>Roberto Metere, York University</li>
+							<li>Paolo Milazzo, Dipartimento di Informatica - Università di Pisa</li>
+							<li>Anna Monreale, Computer Science Dep., University of Pisa</li>
+							<li>Sotiris Moschoyiannis, University of Surrey</li>
+							<li>Mirco Nanni, KDD-Lab ISTI-CNR Pisa</li>
+							<li>Lucia Nasti, Gran Sasso Science Institute</li>
+							<li>Michela Quadrini, Università di Camerino</li>
+							<li>Gwen Salaün, Université Grenoble Alpes</li>
+							<li>Simone Tini, University of Insubria</li>
+							<li>Thais Webber, Aston University</li>
+							<li>Paolo Zuliani, Università di Roma "La Sapienza"</li>
+v						</ul>
 					</div>
 
 					<div><h3 class="sub-title-0  mt-20 mb-20">
