--- a/index.html
+++ b/index.html
@@ -757,12 +757,12 @@
 						<ul>
 							<li>Oana Andrei, University of Glasgow</li>
 							<li>Luca Arnaboldi, University of Birmingham</li>
-							<li>Juliana Küster Filipe Bowles, School of Computer Science, University of St Andrews</li>
+							<li>Juliana Bowles, University of St Andrews</li>
 							<li>Giovanna Broccia, ISTI-CNR, FMT Lab</li>
 							<li>Antonio Cerone, Nazarbayev University</li>
 							<li>Ricardo M. Czekster, Aston University</li>
 							<li>Flavio Ferrarotti, Software Competence Centre Hagenberg</li>
-							<li>Vashti Galpin, Laboratory for Foundations of Computer Science, University of Edinburgh</li>
+							<li>Vashti Galpin, University of Edinburgh</li>
 							<li>Riccardo Guidotti, University of Pisa</li>
 							<li>Alexander Kocian, University of Pisa</li>
 							<li>Livia Lestingi, Politecnico di Milano</li>
