--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
 				<div class="text-center dates">
 					<h3 class=""><span class="gradient-text">RESEARCH PAPERS – SHORT AND FULL<p></p></span></h3>
 					<ul style="list-style: none; padding: 0;">
-						<li class="block-important-dates ">Abstract submission deadline (optional): <strong style="margin-left:1em">TBA</strong></li>
-						<li class="block-important-dates ">Paper submission deadline: <strong style="margin-left:1em">TBA</strong></li>
-						<li class="block-important-dates ">Acceptance notification: <strong>TBA</strong></li>
-						<li class="block-important-dates ">Camera ready due: <strong>TBA</strong></li>
+						<li class="block-important-dates ">Abstract submission deadline (<b>optional</b>): <strong>26<sup>th</sup> August</strong></li>
+						<li class="block-important-dates">Paper submission deadline: <font color="#EE11AA"><strong>1<sup>st</sup> September</strong></font></li>
+						<li class="block-important-dates ">Acceptance notification: <strong>30<sup>th</sup> September</strong></li>
+						<li class="block-important-dates ">Camera ready due: <strong>14<sup>th</sup> October</strong></li>
 					</ul>
 				</div>
 				<div class="text-center dates">
@@ -322,8 +322,8 @@
 					<ul style="list-style: none; padding: 0;">
 						<li class="block-important-dates ">Submission via email to:
 						  <a style="color: #AF1B71;" href="mailto:datamod2024@easychair.org">datamod2024@easychair.org</a></strong></li>
-						<li class="block-important-dates ">Presentation report deadline: <strong>TBA</strong></li>
-						<li class="block-important-dates ">Acceptance notification: <strong>TBA</strong></li>
+						<li class="block-important-dates ">Presentation report deadline: <strong>1<sup>st</sup> November</strong></li>
+						<!--<li class="block-important-dates ">Acceptance notification: <strong>TBA</strong></li>-->
 					</ul>
 				</div>
 
