--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 						</ul>
 					</div>
 
-					<div><h3 class="sub-title-0  mt-20 mb-20">
+					<!--<div><h3 class="sub-title-0  mt-20 mb-20">
 						   <span class="topics">
 							  ORGANIZING COMMITEE
 						   </span>
@@ -757,7 +757,7 @@
 						<ul>
 							<li>&nbsp;</li>
 						</ul>
-					</div>
+					</div>-->
 
 					<div><h3 class="sub-title-0  mt-20 mb-20">
 						   <span class="topics">
