--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                 <div class="col-sm-8 col-sm-offset-2  " style="padding: 3em;">
                     <div class="block-faq mb-50">
 						<h3 class="sub-title-0 mb-20">
-							<span class="topics">FORMS</span>
+							<span class="topics">TYPES</span>
 						</h3>
-						<p>Papers can take one of the following three forms: </p>
+						<p>Papers can take one of the following three types: </p>
                         <li>Regular (research, tool or position) paper, up to 16 pages (excluding references)</li>
                         <li>Short (research, tool or position) paper, up to 8 pages (excluding references)</li>
                         <li>Presentation report, up to 4 pages </li>
