--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
 							<li>Alexander Kocian, University of Pisa</li>
 							<li>Livia Lestingi, Politecnico di Milano</li>
 							<li>José Manuel	Ferreira Machado, University of Minho</li>
-							<li>Roberto Metere, York University</li>
+							<li>Roberto Metere, University of York</li>
 							<li>Paolo Milazzo, Dipartimento di Informatica - Università di Pisa</li>
 							<li>Anna Monreale, Computer Science Dep., University of Pisa</li>
 							<li>Sotiris Moschoyiannis, University of Surrey</li>
