--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
 							
 							Authors should therefore consult <a href="http://www.springer.com/comp/lncs/authors.html" class="but icon-doc" target="_blank"> Springer's authors' instructions</a> and use their  
 							proceedings templates, either for 
-							<a href="https://resource-cms.springernature.com/springer-cms/rest/v1/content/19238648/data/v6" class="but icon-doc" target="_blank">LaTeX</a> 
-							or for <a href="https://resource-cms.springernature.com/springer-cms/rest/v1/content/19238706/data/v2" class="but icon-doc" target="_blank"> Word</a>, 
+							<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" class="but icon-doc" target="_blank">LaTeX</a> 
+							or for <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" class="but icon-doc" target="_blank"> Word</a>, 
 							for the preparation of their papers. 
 
 							Springer’s proceedings LaTeX templates are also available in <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WsdHOy5uZpg" target="_blank"> Overleaf</a>.
