--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
 				<div class="text-center dates">
 					<h3 class=""><span class="gradient-text">RESEARCH PAPERS – SHORT AND FULL<p></p></span></h3>
 					<ul style="list-style: none; padding: 0;">
-						<li class="block-important-dates ">Abstract submission deadline (<b>optional</b>): <strong>26<sup>th</sup> August</strong></li>
-						<li class="block-important-dates">Paper submission deadline: <font color="#EE11AA"><strong>1<sup>st</sup> September</strong></font></li>
-						<li class="block-important-dates ">Acceptance notification: <strong>30<sup>th</sup> September</strong></li>
+						<li class="block-important-dates "><font color="#AABCC"><s>Abstract submission deadline (<b>optional</b>): 26<sup>th</sup> August</font></s></li>
+						<li class="block-important-dates">Paper submission deadline: <s><font color="#AABBCC">1<sup>st</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>15<sup>th</sup> September</strong> (hard deadline)</font></li>
+						<li class="block-important-dates ">Acceptance notification: <s><font color="#AABCC">30<sup>th</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>5<sup>th</sup> October</strong></font></li>
 						<li class="block-important-dates ">Camera ready due: <strong>14<sup>th</sup> October</strong></li>
 					</ul>
 				</div>
