--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
 					<ul style="list-style: none; padding: 0;">
 						<li class="block-important-dates "><font color="#AABCC"><s>Abstract submission deadline (<b>optional</b>): 26<sup>th</sup> August</font></s></li>
 						<li class="block-important-dates">Paper submission deadline: <s><font color="#AABBCC">1<sup>st</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>15<sup>th</sup> September</strong> (hard deadline)</font></li>
-						<li class="block-important-dates ">Acceptance notification: <s><font color="#AABCC">30<sup>th</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>5<sup>th</sup> October</strong></font></li>
+                  <li class="block-important-dates">Presentation Report submission deadline: <font color="#EE11AA"><strong>6<sup>th</sup> October</strong></font></li>
+						<li class="block-important-dates ">Acceptance notification (papers): <s><font color="#AABCC">30<sup>th</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>5<sup>th</sup> October</strong></font></li>
+						<li class="block-important-dates ">Acceptance notification (presentation reports): <font color="#EE11AA"><strong>19<sup>th</sup> October</strong></font></li>
 						<li class="block-important-dates ">Camera ready due: <strong>14<sup>th</sup> October</strong></li>
 					</ul>
 				</div>
