--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
 						<li class="block-important-dates "><font color="#AABCC"><s>Abstract submission deadline (<b>optional</b>): 26<sup>th</sup> August</font></s></li>
 						<li class="block-important-dates">Paper submission deadline: <s><font color="#AABBCC">1<sup>st</sup> September</font></s>&nbsp;<font color="#EE11AA"><strong>15<sup>th</sup> September</strong> (hard deadline)</font></li>
 						<li class="block-important-dates ">Acceptance notification: <s><font color="#AABCC">30<sup>th</sup> September</font></s>&nbsp;<font color="#EE0000"><strong>7<sup>th</sup> October</strong></font></li>
-						<li class="block-important-dates ">Camera ready due: <strong>14<sup>th</sup> October</strong></li>
+						<li class="block-important-dates ">Revised version: <strong>14<sup>th</sup> October</strong><br>
+                  <font size="-1">(note that you will have the opportunity to submit the camera-ready <br>paper for the LNCS Proceedings with discussions and remarks<br> <strong>after the symposium</strong>, ie, by the end of the year or early Jan/25)</font>
+                  </li>
 					</ul>
 				</div>
 				<div class="text-center dates">
