--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 						<div role="tabpanel" class="tab-pane fade in active" id="schedule_1">
 							<div class="panel-group schedule-accordion" id="accordion" role="tablist" aria-multiselectable="true">
 								<div class="panel panel-default intro">
-									<div class="row" style="margin-top:0;">
+									<div class="row" style="margin-top:0; background-color:#EEFFEE">
 										<div class="col-sm-2">12:30 - 13:45</div>
 										<div class="col-sm-10" style="text-align:left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -574,7 +574,7 @@
 									    </div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">13:50 - 14:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="font-weight: 800; margin-top:0.2em; color: white; background-color: #003844;">Opening</h5>
@@ -582,7 +582,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#EEEEFF">
 										<div class="col-sm-2">15:00 - 15:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -598,7 +598,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#FFEEEE">
 										<div class="col-sm-2">16:00 - 16:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<span aria-hidden="true" class="fa fa-coffee"></span> Coffee break
@@ -613,7 +613,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#EEEEFF">
 										<div class="col-sm-2">17:00 - 17:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -656,7 +656,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#EEEEFF">
 										<div class="col-sm-2">09:30 - 10:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -672,7 +672,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#FFEEEE">
 										<div class="col-sm-2">10:30 - 11:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -680,7 +680,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">11:00 - 12:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk 2 - TBA</p>
@@ -688,7 +688,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#EEEEFF">
 										<div class="col-sm-2">12:00 - 12:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -696,7 +696,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#EEFFEE">
 										<div class="col-sm-2">12:30 - 14:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -704,14 +704,14 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk CIFMA - TBA</p>
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#DDDDDD">
 										<div class="col-sm-2">15:00 - 15:10</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -719,7 +719,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top:2em;">
+									<div class="row" style="margin-top:2em; background-color:#EEEEFF">
 										<div class="col-sm-2">15:10 - 15:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
@@ -735,7 +735,7 @@
 										</div>
 									</div>
 
-									<div class="row" style="margin-top: 2em;">
+									<div class="row" style="margin-top: 2em; background-color:#FFEEEE">
 										<div class="col-sm-2">16:00 - 16:30</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
