--- a/index.html
+++ b/index.html
@@ -474,51 +474,50 @@
 				<h1 class="title">Keynote Speakers</h1>
 			</div>
 
+         <!-- first -->
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 				<div class="row" style="border-bottom: none; padding-bottom: 0;">
 					<div class="col-sm-2">
-						<img class="" src="images/tba.jpg">
+						<img class="" src="images/am-photo.png">
 					</div>
 					<div class="col-sm-8" style="text-align: left;">
 						<h3 style="font-size: 150%;">
-							<span class="">TBA</span> 
-<!-- 							<a href="https://www.santannapisa.it/en/andrea-vandin" target="_blank"><i class="fa fa-globe mt-20" style="margin-left: 1em;"></i></a>
- -->						</h3>
-						    <p>TBA.</p>
-						    <p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span> TBA</p>
+							<span class="">Alexandre Madeira</span> 
+ 							<a href="https://sweet.ua.pt/madeira/" target="_blank"><i class="fa fa-globe mt-20" style="margin-left: 1em;"></i></a>
+ 						</h3>
+						    <p><a href="https://cidma.ua.pt"> CIDMA</a>,<a href="http://haslab.uminho.pt"> HASLab </a> - <a href="http://www2.inescporto.pt/"> INESC TEC </a><br><a href="https://www.ua.pt/dmat/#">Mathematics Department</a>, <a href="http://www.ua.pt">University of Aveiro</a></p>
+						    <p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span> TBA.</p>
 						
 					</div>
 				</div>
 				 <div class="row" style="text-align: left;">
 					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">TITLE:</span> TBA</p>
-					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> TBA
- 					<!-- will go here--></p>
+					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> TBA.</p>
 
 				</div> 
 			</div>
 
-
+         <!-- second -->
 			<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 				<div class="row" style="border-bottom: none; padding-bottom: 0;">
 					<div class="col-sm-2">
-						<img class="" src="images/tba.jpg">
+						<img class="" src="images/cmf-photo.png">
 					</div>
 					<div class="col-sm-8" style="text-align: left;">
 						<h3 style="font-size: 150%;">
-							<span class="">TBA</span> 
-<!-- 							<a href="" target="_blank"><i class="fa fa-globe mt-20" style="margin-left: 1em;"></i></a>
- -->						</h3>
- 						<p> TBA.</p>
- 						<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span>
-							TBA
-						</p>
+							<span class="">Carlos M. Fonseca</span> 
+ 							<a href="https://eden.dei.uc.pt/~cmfonsec" target="_blank"><i class="fa fa-globe mt-20" style="margin-left: 1em;"></i></a>
+ 						</h3>
+						    <p><a href="http://cisuc.uc.pt/">CISUC</a>, <a href="http://www.dei.uc.pt/">Department of Informatics Engineering</a><br><a href="http://www.uc.pt/">University of Coimbra</a></p>
+						    <p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span> Carlos M. Fonseca is an Associate Professor at the Department of Informatics Engineering of the University of Coimbra, Portugal, and a member of the Adaptive Computation group of CISUC, the Centre for Informatics and Systems of the University of Coimbra. He obtained his doctoral degree from the University of Sheffield, U.K., where he also conducted post-doctoral research. His main research interests are in multiobjective optimisation, evolutionary computation, experimental evaluation of optimisation algorithms, and practical applications of optimisation. He currently focuses mainly on preference articulation in multiobjective optimisation and the computational modelling of optimisation problems. He serves as Action Chair and Grant Holder Scientific Representative of COST Action ROAR-NET, a European research and innovation network aimed at making randomised optimisation algorithms widely competitive in practice by identifying and reducing obstacles to their adoption at the scientific, technical, economic, and human levels.</p>
+						
 					</div>
 				</div>
-				<div class="row" style="text-align: left;">
-					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">TITLE:</span> TBA</p>
-					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> TBA
-				   <!-- will go here--></p>
-				</div>
+				 <div class="row" style="text-align: left;">
+					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">TITLE:</span> Metaheuristics for Combinatorial Optimisation: Models or Algorithms?</p>
+					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> Evolutionary algorithms, ant colony optimisation, particle swarm optimisation, iterated local search, tabu search, and GRASP, among others, are examples of randomised optimisation algorithms that are often grouped together under the term metaheuristics and have shown success in solving many large combinatorial optimisation problems. Unfortunately, the flexibility with which they can be adapted to new problems has led to a situation where each such adaptation is presented as a new algorithm for a specific problem. An alternative view is that problem-specific features should be captured by, and encapsulated in, a model with which optimisation algorithms interact in a problem-independent way. This keynote presents ongoing work to make this vision a reality.</p>
+
+				</div> 
 			</div>
 
 
