--- a/index2.html
+++ b/index2.html
@@ -726,6 +726,7 @@
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk CIFMA - TBA</p>
+                                 <p>&nbsp;</p>
 										</div>
 									</div>
 
