--- a/index2.html
+++ b/index2.html
@@ -578,7 +578,9 @@
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="font-weight: 800; margin-top:0.2em; color: white; background-color: #003844;">Opening</h5>
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk 1 - Alexandre  Madeira</p>
-										</div>
+                                 <div class="affiliation"><a href="https://cidma.ua.pt"> CIDMA</a>,<a href="http://haslab.uminho.pt"> HASLab </a> - <a href="http://www2.inescporto.pt/"> INESC TEC </a><br><a href="https://www.ua.pt/dmat/#">Mathematics Department</a>, <a href="http://www.ua.pt">University of Aveiro</a></div>
+                                 <div><h5><b>Title:</b> TBA</h5></div>
+                              </div>
 									</div>
 
 									<div class="row" style="margin-top: 2em; background-color:#EEEEFF">
@@ -691,8 +693,8 @@
 										<div class="col-sm-2">11:00 - 12:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk 2 - Carlos M.  Fonseca</p>
-											<div class="affiliation"> <!-- affiliation will go here--> </div>
-                                 <div><h5>Metaheuristics for Combinatorial Optimisation: Models or Algorithms?</h5></div>
+											<div class="affiliation"><a href="http://cisuc.uc.pt/">CISUC</a>, <a href="http://www.dei.uc.pt/">Department of Informatics Engineering</a><br><a href="http://www.uc.pt/">University of Coimbra</a></div>
+                                 <div><h5><b>Title:</b> Metaheuristics for Combinatorial Optimisation: Models or Algorithms?</h5></div>
 										</div>
 									</div>
 
@@ -726,7 +728,7 @@
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk CIFMA - TBA</p>
-                                 <p>&nbsp;</p>
+                                 <p>Title: TBA</p>
 										</div>
 									</div>
 
