--- a/index2.html
+++ b/index2.html
@@ -486,7 +486,7 @@
  							<a href="https://sweet.ua.pt/madeira/" target="_blank"><i class="fa fa-globe mt-20" style="margin-left: 1em;"></i></a>
  						</h3>
 						    <p><a href="https://cidma.ua.pt"> CIDMA</a>,<a href="http://haslab.uminho.pt"> HASLab </a> - <a href="http://www2.inescporto.pt/"> INESC TEC </a><br><a href="https://www.ua.pt/dmat/#">Mathematics Department</a>, <a href="http://www.ua.pt">University of Aveiro</a></p>
-						    <p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span> TBA.</p>
+						    <p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">BIO:</span> Alexandre Madeira is an Associate Professor in the Department of Mathematics at the University of Aveiro and a member of the Center for Research and Development in Mathematics & Applications. His key contributions lie in parametric methods for constructing specialized logics tailored to specific applications. His groundbreaking work began during his PhD in 2013, where he developed a method to generate logics to design reconfigurable systems. Since then, his research has expanded to the generation of various non-classical logics, focusing on the specification and verification of programs with non-standard behaviours, including those involving weighted and paraconsistent computations.</p>
 						
 					</div>
 				</div>
