--- a/index2.html
+++ b/index2.html
@@ -640,7 +640,7 @@
 										<div class="col-sm-10" style="text-align: left;">
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
 											Julius Figge and David Knuplesch</h5>
-                                 <h5>Applications of Formal Verification Techniques for Security in Automotive Diagnostics - a Literature-Survey<br><b>Presentation Report</b></h5>
+                                 <h5>Applications of Formal Verification Techniques for Security in Automotive Diagnostics - a Literature-Survey<br><b>Presentation Report</b> - <a href="pdf/DataMod2024_figge.pdf">pdf</a></h5>
 										</div>
 									</div>
 
