--- a/index.html
+++ b/index.html
@@ -728,26 +728,30 @@
 									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
-											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk CIFMA - TBA</p>
-                                 <p>Title: TBA</p>
+											<p style="font-weight: 600; margin:1em 0 0 0;color: #A01844;">Invited Talk <a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a> - João Gama</p>
+                                 <div><h5><b>Title:</b> A New Spring for Artificial Intelligence</h5></div>
 										</div>
 									</div>
 
 									<div class="row" style="margin-top:2em; background-color:#EEDDFF">
 										<div class="col-sm-2">15:00 - 15:30</div>
 										<div class="col-sm-10" style="text-align: left;">
-											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
-											CIFMA - Talk 1</h5>
-                                 <h5>TBA</b></h5>
+											<h5 style="margin-top:0.2em;font-weight: 800;color: #A01844;">
+											<a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a></h5>
+                                 <h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
+                                 Pedro Quaresma and Pierluigi Graziani</h5>
+                                 <h5>A Readability Criterion for Humans and Machines</h5>
 										</div>
 									</div>
 
 									<div class="row" style="margin-top:2em; background-color:#EEDDFF">
 										<div class="col-sm-2">15:30 - 16:00</div>
 										<div class="col-sm-10" style="text-align: left;">
-											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
-											CIFMA - Talk 2</h5>
-                                 <h5>TBA</b></h5>
+											<h5 style="margin-top:0.2em;font-weight: 800;color: #A01844;">
+											<a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a></h5>
+                                 <h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
+                                 Antonio Cerone and Olzhas Zhangeldinov</h5>
+                                 <h5>Cognitive Aspects in the Formal Modelling of Multi-party Human-computer Interaction</h5>
 										</div>
 									</div>
 
