--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
-											<p style="font-weight: 600; margin:1em 0 0 0;color: #A01844;">Invited Talk <a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a> - João Gama</p>
+											<p style="font-weight: 600; margin:1em 0 0 0;color: #A01844;">Invited Talk <a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a> - <a href="https://www.inesctec.pt/en/people/joao-gama" target="_blank">João Gama</p>
                                  <div><h5><b>Title:</b> A New Spring for Artificial Intelligence</h5></div>
 										</div>
 									</div>
