--- a/index.html
+++ b/index.html
@@ -491,9 +491,11 @@
 					</div>
 				</div>
 				 <div class="row" style="text-align: left;">
-					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">TITLE:</span> TBA</p>
-					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> TBA.</p>
-
+					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">TITLE:</span> A Logics-on-Demand Approach to Modelling with Uncertainty and Inconsistencies</p>
+					<p><span class="" style="font-size: 110%;padding-top: 2%;font-weight: 900;">ABSTRACT:</span> In this talk, we present an overview of some developments in the parametric generation of logics, focusing on their application to modelling scenarios characterized by information that is often vague or inconsistent. We address this challenge by applying methods to construct (modal) "logics-on-demand," arguing that vague information should be handled using graded transition systems [1], while inconsistencies can be formalized using paraconsistent transition systems [2]. The introduction of formal logics tailored to specify and reason about these structures is achieved through systematic methods, where a key parameter is the choice of an appropriate truth space (technically, specific residuated lattices), selected in function of the problem to be approached.<br>
+               <p><font size="-1"><b>References</b><br>
+               <b>[1]</b> A. Madeira, R. Neves, M. A. Martins. <i>An exercise on the generation of many-valued dynamic logics</i>. J. Log. Algebraic Methods Program. 85(5): 1011-1037 (2016)<br>
+               <b>[2]</b> J.Cunha, A. Madeira, L. S. Barbosa. <i>Specification of paraconsistent transition systems, revisited</i>. Sci. Comput. Program. 240: 103196 (2025).</font></p>
 				</div> 
 			</div>
 
@@ -579,7 +581,7 @@
 											<h5 style="font-weight: 800; margin-top:0.2em; color: white; background-color: #003844;">Opening</h5><hr>
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk 1 - Alexandre  Madeira</p>
                                  <div class="affiliation"><a href="https://cidma.ua.pt"> CIDMA</a>,<a href="http://haslab.uminho.pt"><br><a href="https://www.ua.pt/dmat/#">Mathematics Department </a> of <a href="http://www.ua.pt">University of Aveiro</a></div>
-                                 <div><h5><b>Title:</b> TBA</h5></div>
+                                 <div><h5><b>Title:</b> A Logics-on-Demand Approach to Modelling with Uncertainty and Inconsistencies</h5></div>
                               </div>
 									</div>
 
