--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
 									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">13:50 - 14:00<br><br><br>14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
+                                 <p style="color:#FFFFFF;background-color:#EE3322;font-weight:800">Location: Room 11.2.21, Mathematics Department (building 11)</p>
 											<h5 style="font-weight: 800; margin-top:0.2em; color: white; background-color: #003844;">Opening</h5><hr>
 											<p style="font-weight: 600; margin:1em 0 0 0">Invited Talk 1 - Alexandre  Madeira</p>
                                  <div class="affiliation"><a href="https://cidma.ua.pt"> CIDMA</a>,<a href="http://haslab.uminho.pt"><br><a href="https://www.ua.pt/dmat/#">Mathematics Department </a> of <a href="http://www.ua.pt">University of Aveiro</a></div>
@@ -730,6 +731,7 @@
 									<div class="row" style="margin-top:2em; background-color:#FFEEFF">
 										<div class="col-sm-2">14:00 - 15:00</div>
 										<div class="col-sm-10" style="text-align: left;">
+                                 <p style="color:#FFFFFF;background-color:#EE3322;font-weight:800">Location: Auditório José Graça, 22.3.1, Mechanics Department (building 22)</p>
 											<p style="font-weight: 600; margin:1em 0 0 0;color: #A01844;">Invited Talk <a href="https://cifma.github.io/" target="_blank"><font color="#A01844">CIFMA</font></a> - <a href="https://www.inesctec.pt/en/people/joao-gama" target="_blank">João Gama</p>
                                  <div><h5><b>Title:</b> A New Spring for Artificial Intelligence</h5></div>
 										</div>
@@ -778,6 +780,7 @@
 									<div class="row" style="margin-top:2em; background-color:#EEEEFF">
 										<div class="col-sm-2">16:30 - 16:50</div>
 										<div class="col-sm-10" style="text-align: left;">
+                                <p style="color:#FFFFFF;background-color:#EE3322;font-weight:800">Location: Room 11.2.21, Mathematics Department (building 11)</p>
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
 											Juliana Bowles, Linda Brodo, Roberto Bruni, Moreno Falaschi, Roberta Gori and Paolo Milazzo</h5>
                                  <h5>Analyzing Comorbidity Treatments with Reaction Systems<br><b>Presentation Report</b></h5>
