--- a/index.html
+++ b/index.html
@@ -670,6 +670,7 @@
 									<div class="row" style="margin-top:2em; background-color:#EEEEFF;">
 										<div class="col-sm-2">09:00 - 09:30</div>
 										<div class="col-sm-10" style="text-align: left;">
+                                 <p style="color:#FFFFFF;background-color:#EE3322;font-weight:800">Location: Room 11.2.21, Mathematics Department (building 11)</p>
 											<h5 style="margin-top:0.2em;font-weight: 800;color: #003844;">
 											Daniel Leto Neiva Costa, Elizabeth Fialho Wanner, Roberto Alamino and Thais Webber</h5>
                                  <h5>Modelling COVID-19 with a SIR Variant using Real-World Data: a Case Study in Brazil</h5>
